[tool.poetry]
name = "hideout-game"
version = "0.1.0"
description = ""
authors = ["Max <80003087+mesiriak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "hideout_game"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
asyncio = "^3.4.3"
black = "^22.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
